--- a/ML/概率图模型基础.md
+++ b/ML/概率图模型基础.md
@@ -40,7 +40,7 @@
   - 无向图 Markov Network
   - 高斯图 Gaussian Network(BN MN)
 - Inference(给定已知数据，求另外的概率分布)
-  - Exact Inference
+  - Exact Inference：使用 DP 计算联合分布
   - Approximate Inference
     - 确定性近似（变分推断）
     - 随机近似 MCMC
@@ -172,7 +172,7 @@ graph LR
 
 ### 条件独立性
 
-条件独立性体现在以下三个方面，且能互相推出：
+条件独立性体现在以下三个方面，且能**互相推出**：
 
 **无向图的全局马尔可夫性**：给定两个随机变量集合的分离集，两个随机变量集合之间条件独立。
 
@@ -203,7 +203,7 @@ $x_i \perp x_j | x_{-i-j}$ 其中$x_i,x_j$不能相邻
 
 **团分解**：将联合概率分解为多个团的势函数乘积
 
-所有团的集合记为$C$, 与团$c$对应的变量集合$x_c$,势函数$\psi_c(x_c)$
+所有团的集合记为$C$, 与团$c$对应的变量集合$x_c$,势函数$\psi_c(x_c) \geq 0$
 
 $$
 p(x_1, \dots, x_p) = \frac{1}{Z} \prod_{c \in C} \psi_c(x_c)
@@ -214,3 +214,49 @@ $$
 _Mark: $\psi_c(x_c)$取值随着 x_c 中的 x 取值改变而改变_
 
 接下来的问题时如何构建势函数，使得因子分解与条件独立性一致。
+
+然而，当变量个数较多时，团的数量会很多，因此需要简化，注意到团被极大团包含，因此可以使用极大团来简化。$C^*$为极大团的集合。
+
+$$
+p(x_1, \dots, x_p) = \frac{1}{Z} \prod_{c \in C^*} \psi_c(x_c)
+$$
+
+### Hammesley-Clifford 定理
+
+如果联合概率分布能够使用极大团势函数表示，那么由该定理可以证明，**因子分解与条件独立性的三个性质等价**。
+
+### 如何使用因子分解
+
+为了满足非负性，我们一般定义势函数（Gibbs Distribution）
+
+$$
+\psi_Q(x_Q) = \exp(-H_Q(x_Q))
+$$
+
+那么此时，联合概率分布为
+
+$$
+p(x_1, \dots, x_p) = \frac{1}{Z} \prod_{c \in C^*} \psi_c(x_c) = \frac{1}{Z} \prod_{c \in C^*} \exp(-H_c(x_c)) =  \underbrace{\frac{1}{Z} \exp(-\sum_{c \in C^*} H_c(x_c))}_{\text{指数族分布}}
+$$
+
+经过一通乱七八糟的说明之后，我们可以得知，Markov Random Field 与 Gibbs Distribution 是等价的。
+
+## 4. Inference
+
+总体来讲，Inference 是指求解已知数据的概率，而求已知数据的概率时需要模型的参数，但是如果将参数看作未知的变量，那么学习的过程也可以被看作是 Inference 的过程。
+
+Inference 主要分为两类：1. $p(x_E)$ 2. $p(x_F | x_E)$, 而 $p(x_F | x_E)$又可以被写作
+
+$$
+p(x_F | x_E) = \frac{p(x_F, x_E)}{p(x_E)}
+$$
+
+实际上 Inference 过程最主要的问题就是求解边缘分布的过程。
+
+- 精确推断
+  - 动态规划/变量消除/Variable Elimination
+  - 信念传播/Belief Propagation
+  - Junction Tree
+- 近似推断
+  - 确定性近似：变分推断
+  - 随机近似：MCMC
