--- a/ML/概率图模型基础.md
+++ b/ML/概率图模型基础.md
@@ -27,7 +27,7 @@
 
 **简化 1**：每个随机变量之间相互独立，即有$p(x_1, \dots, x_p) = \prod_{i=1}^{p} p(x_i)$
 
-- Naive Bayes 假设所有特征之间条件独立，即有$p(x_1, \dots, x_p|y) = \prod_{i=1}^{p} p(x_i|y)$
+- Naive Bayes 假设所有特征之间**条件独立**，即有$p(x_1, \dots, x_p|y) = \prod_{i=1}^{p} p(x_i|y)$
 
 **简化 2（Markov Property）**：给定当前状态，未来状态与过去状态无关，即有$p(x_k | x_1, \dots x_{k-1},x_{k+1},\dots, x_{p}) = p(x_k | x_{k-1})$
 
@@ -245,7 +245,11 @@ $$
 
 总体来讲，Inference 是指求解已知数据的概率，而求已知数据的概率时需要模型的参数，但是如果将参数看作未知的变量，那么学习的过程也可以被看作是 Inference 的过程。
 
-Inference 主要分为两类：1. $p(x_E)$ 2. $p(x_F | x_E)$, 而 $p(x_F | x_E)$又可以被写作
+Inference 主要分为两类：
+
+1. $p(x_E)$
+2. $p(x_F | x_E)$, 而 $p(x_F | x_E)$又可以被写作
+3. MAP: $\arg \max_{x_F} p(x_F | x_E)$
 
 $$
 p(x_F | x_E) = \frac{p(x_F, x_E)}{p(x_E)}
@@ -260,3 +264,33 @@ $$
 - 近似推断
   - 确定性近似：变分推断
   - 随机近似：MCMC
+
+### Variable Elimination
+
+```mermaid
+graph LR
+    x1 --> x2
+    x2 --> x3
+    x3 --> x4
+    x3 --> x5
+```
+
+$x_5$的边缘概率分布求解为
+
+$$
+P(x_5) = \sum_{x_1} \sum_{x_2} \sum_{x_3} \sum_{x_4} P(x_1, x_2, x_3, x_4, x_5)
+$$
+
+在这个过程中，如果直接计算，复杂度将会是$O(|x_1||x_2||x_3||x_4|)$，但是在其中有很多冗余的计算，因此可以使用动态规划的思想，将已经计算过的值存储起来，这样可以将复杂度降低到$O(|x_1| + |x_2| + |x_3| + |x_4|)$。
+
+$$
+= \sum_{x_1} \sum_{x_2} \sum_{x_3} \sum_{x_4} P(x_1) P(x_2 | x_1) P(x_3 | x_2) P(x_4 | x_3) P(x_5 | x_3) = \\
+\sum_{x_3} P(x_5 | x_3) \sum_{x_4} P(x_4 | x_3) \sum_{x_2} P(x_3 | x_2) \sum_{x_1} P(x_2 | x_1) P(x_1)
+$$
+
+可以定义中间函数：
+
+$$
+m_{12}(x_2) = \sum_{x_1} P(x_2 | x_1) P(x_1) \\
+m_{23}(x_3) = \sum_{x_2} P(x_3 | x_2) m_{12}(x_2) \dots
+$$
