--- a/ML/统计学习理论.md
+++ b/ML/统计学习理论.md
@@ -18,6 +18,8 @@ Mark:不正式的讲，我们在建模的时候，第一步就是要选择一个
 
 ### 策略
 
+#### 风险函数
+
 我们可以定义损失函数，损失函数越低模型就越好，可以考察损失函数的期望值,被定义为**风险函数/期望损失**。
 
 $$
@@ -32,9 +34,23 @@ $$
 
 当$N \to \infin$时，根据大数定律，经验损失趋近于期望损失，然而实际情况下训练集样本量很少，需要对经验风险进行矫正，这样就涉及到两种基本策略：**经验风险最小化和结构风险最小化**。
 
-经验风险最小化就是$\arg \min_{f \in \mathcal{F}} R_{\text{emp}}(f)$, 当样本容量很小的时候，会产生 over-fitting。
+**经验风险最小化**就是$\arg \min_{f \in \mathcal{F}} R_{\text{emp}}(f)$, 当样本容量很小的时候，会产生 over-fitting。
 
 结构风险最小化就是$\arg \min_{f \in \mathcal{F}} \frac{1}{N} \sum L(y_i, f(x_i)) + \lambda J(f)$，其中$J(f)$时定义在$f$上的泛函，可以被称为正则项/罚项。**结构风险最小化等价于正则化。**
+
+#### 泛化能力
+
+我们在训练集上训练出来的模型，我们希望它在未知的数据上也能有很好的表现，这就是泛化能力。
+
+然而在实践中，很难直接获取泛化能力，我们可以使用获取的测试集上的损失来近似泛化能力。
+
+这样的评价指标一般是不可靠的，因为测试集是有限的，我们定义**泛化误差(gernerlization error)**，也就是期望风险为
+
+$$
+R_{\text{exp}}(f) = \mathbb{E}_p[L(y, f(x))]= \int_{x,y} L(y, f(x)) p(x, y) \text{d} x \text{d}y
+$$
+
+分析学习方法的泛化能力常常通过分析泛化误差上界进行。
 
 ## MLE, MAP, Bayesian
 
@@ -49,6 +65,8 @@ $$
   $$
 
   当函数 convex 时，可以使用充要条件求梯度=0；当函数 non-convex 时，可以使用[EM 算法](https://www.cnblogs.com/Blackteaxx/p/18178802)迭代求解。
+
+  在一定条件下，**MLE 和经验风险最小化等价**，详见《统计学习方法》习题 1.2
 
 - **MAP**
 
