--- a/ML/统计学习介绍.md
+++ b/ML/统计学习介绍.md
@@ -3,8 +3,10 @@
 统计学习的三要素包括模型、策略、算法。
 
 统计学习方法概括如下：
-
+ 
 假设数据是由独立同分布产生的
+
+概念：是一个从样本空间$\mathcal{X}$到标记空间$\mathcal{Y}$的映射，如果对于任何的样例$(x,y)$都有$c(x)=y$，那么称作$c$为目标概念，目标概念的集合为目标概念类，记为$\mathcal{C}$。
 
 1. 模型：假设要学习的模型属于某一种函数的集合，称为假设空间(Hypothesis Space)
 2. 策略：应用某一个评价准则，从从假设空间选取一个最优的模型，使得已知数据和位置数据在模型下有最佳的预测
