--- a/Mathmatics/Optimization/无约束优化概述.md
+++ b/Mathmatics/Optimization/无约束优化概述.md
@@ -20,6 +20,39 @@ $$
    2. 全局最优解：$\forall x \in \text{dom}f, f(x^\star) \leq f(x)$
    3. 严格局部最优解：$\forall x \in \text{dom}f \cap \text{N}_\delta (x), f(x^\star) < f(x)$
 
+## 收敛速度
+
+如果对于凸二次优化，能在有限步数内收敛到最优解，那么我们称其为**二次收敛**。
+
+### Quotient Convergence Rate
+
+即我们考察
+
+$$
+\lim_{k \to \infin} \frac{\| x_{k+1} - x^\star \|}{\| x_k - x^\star \|^p} = \lambda
+$$
+
+1. $p = 1,\lambda = 1$，称为**次线性收敛**
+2. $p = 1,\lambda \in (0,1)$，称为**线性收敛**
+3. $p = 1,\lambda = 0$，称为**超线性收敛**
+4. $p = 2,\lambda \in (0, +\infin)$，称为**二次收敛**
+
+### Root Convergence Rate
+
+是一种曲线救国的收敛速度，即
+
+$$
+\| x_k - x^\star \| \leq t_k
+$$
+
+$t_k$ 也是一个序列，使用放缩的方法，来保证收敛性。
+
+### 迭代次数
+
+如果我们指定一个精度$\varepsilon$，那么对于不同的收敛速度，我们需要的迭代次数是不同的。
+
+例如，对于次线性收敛，我们需要迭代次数为$\frac{1}{\varepsilon}$，对于线性收敛，我们需要迭代次数为$\log \frac{1}{\varepsilon}$，对于二次收敛，我们需要迭代次数为$\sqrt{\frac{1}{\varepsilon}}$。
+
 ## 算法
 
 迭代下降算法，给定初始点$x_0$，迭代产生点列$\{x^k\}_{k=1}^N$，其中$d_k$是搜索方向，$\alpha_k$是步长, **并且满足$f(x_{k+1}) \leq f(x_{k-m})$（单调性）**
@@ -169,6 +202,8 @@ $$
 
 ![img](https://img2023.cnblogs.com/blog/3436855/202405/3436855-20240518010604933-1197101468.png)
 
+然而 Armijo Condition 可能会得到很小的$\alpha_k$，因此我们需要一个更强的条件。
+
 ### 选择$\alpha$的充分条件——GoldStein Condition
 
 **Armijo Condition**: $\phi(\alpha_k) \leq l_k(\alpha) = \phi(0) + c_1 \alpha \nabla f(x_k)^T d_k , c_1 \in (0, 1)$
@@ -187,3 +222,34 @@ $$
 初衷是为了保证$\alpha_k$不要太小，但是当区间比较窄的时候，容易失去效果。
 
 ### 选择$\alpha$的充分条件——Wolfe Condition
+
+![img](https://img2023.cnblogs.com/blog/3436855/202405/3436855-20240518142842182-1362476063.png)
+
+$$
+\phi(\alpha_k) \leq l_k(\alpha) = \phi(0) + c_1 \alpha \nabla f(x_k)^T d_k , c_1 \in (0, 1) \\
+\nabla f(x_k + \alpha_k d_k)^T d_k \geq c_2 \nabla f(x_k)^T d_k , c_2 \in (c_1, 1)
+$$
+
+用了一个相比于 GoldStein Condition 更加宽松的条件。
+
+### 证明充分性
+
+**Zoutendijk 定理**:
+
+1. 如果$f$下有界，且连续可微
+2. $\nabla f$ Lipschitz 连续，即任意$x, y$,存在$L$，使得$\| \nabla f(x) - \nabla f(y) \| \leq L \| x - y \|$，可以联系微分中值定理，用于限制梯度的范数。
+
+   Lipschitz 连续是比连续和一致连续更强的条件。
+
+3. $d_k$是一个下降方向，即$\nabla f(x_k)^T d_k < 0$
+4. Wolfe Condition 满足于$\alpha_k$，则
+   $$
+    \phi(\alpha_k) \leq l_k(\alpha) = \phi(0) + c_1 \alpha \nabla f(x_k)^T d_k , c_1 \in (0, 1) \\
+    \nabla f(x_k + \alpha_k d_k)^T d_k \geq c_2 \nabla f(x_k)^T d_k , c_2 \in (c_1, 1)
+   $$
+
+则有 $\sum_{k=0}^\infin \cos^2 \theta_k \| \nabla f_k \|^2 \leq \infin$
+
+说明：由于$\sum_{k=0}^\infin \cos^2$ 一定是发散的，因此我们可以得到收敛性，即$\lim_{k \to \infin} \| \nabla f_k \| = 0$, 即梯度收敛到 0，即$f(x_k)$收敛到最优解。
+
+证明略
