--- a/ML/统计学习介绍.md
+++ b/ML/统计学习介绍.md
@@ -8,15 +8,29 @@
 
 概念：是一个从样本空间$\mathcal{X}$到标记空间$\mathcal{Y}$的映射，如果对于任何的样例$(x,y)$都有$c(x)=y$，那么称作$c$为目标概念，目标概念的集合为目标概念类，记为$\mathcal{C}$。
 
-1. 模型：假设要学习的模型属于某一种函数的集合，称为假设空间(Hypothesis Space)
+1. 模型：假设要学习的模型属于某**一种函数的集合，称为假设空间(Hypothesis Space)**
 2. 策略：应用某一个评价准则，从从假设空间选取一个最优的模型，使得已知数据和位置数据在模型下有最佳的预测
 3. 算法：最优模型的选取有算法实现
 
-### 模型
+### 假设空间
 
 Mark:不正式的讲，我们在建模的时候，第一步就是要选择一个特定的模型比如 SVM。一旦选择了一个模型，就相当于我们选择了一个假设空间$\mathcal{H}$。在一个假设空间里，我们通常会有无数种不同的解，一个优化算法（比如梯度下降法）做的事情就是从中选择最好的一个解或者多个解，当然优化过程要依赖于样本数据。
 
 正式的讲，假设空间$\mathcal{H}$是一个函数集合，从输入空间映射至输出空间的函数。
+
+而满足训练集的假设空间称为**版本空间**，版本空间是假设空间的一个子集，是与训练集一致的假设的集合。
+
+### Inductive Bias
+
+如果版本空间中有多个假设，那么我们需要选择一个假设，这就涉及到**归纳偏置**。归纳偏置是学习算法在学习过程中对**某种类型假设的偏好**。
+
+然而，确定一个归纳偏置是有歧义的，因为无法定义$简单$、$平滑$这类概念。因此，归纳偏置是一个**经验性的偏好**。
+
+我们观察 NFL 定理，我们标记为$H$为假设空间，$\mathcal{L_a}$为学习算法，$f$为目标函数，$P(h | X, \mathcal{L_a})$为学习算法在数据集下产生的假设$h$的概率
+
+$$
+E(\mathcal{L_a} | X, f) = \sum_h \mathbb{E} [\mathbb{I}(h(x) \neq f(x)) | h] P(h | X, \mathcal{L_a})
+$$
 
 ### 策略
 
@@ -54,6 +68,38 @@ $$
 
 分析学习方法的泛化能力常常通过分析泛化误差上界进行。
 
+### bias-variance tradeoff
+
+我们使用偏差和方差两个指标来评价模型的能力。
+
+假设我们训练的时候使用采样的数据集$D$，样本真实标记为$f(x)$，采样出的标记为$f(x) + \epsilon$，$f(x;D)$为训练出的模型，$\epsilon$为噪声
+
+那么对于回归问题在平均意义下，算法的期望预测为
+
+$$
+\hat{f}(x) = \mathbb{E}_D [f(x;D)]
+$$
+
+那么我们可以定义模型的偏差为
+
+$$
+\text{bias}^2(x) = (\mathbb{E}_D [f(x;D)] - f(x))^2
+$$
+
+方差为
+
+$$
+\text{var}(x) = \mathbb{E}_D[(f(x;D) - \mathbb{E}_D[f(x;D)])^2]
+$$
+
+那么**期望泛化误差**为
+
+$$
+\mathbb{E}_D[(f(x;D) - f(x) - \epsilon)^2] = \text{bias}^2(x) + \text{var}(x) + \epsilon^2
+$$
+
+可以简单地理解为，当模型复杂度/训练轮数上升到一定程度时，偏差降低，但是方差上升，因此我们需要在偏差和方差之间取一个平衡。
+
 ## MLE, MAP, Bayesian
 
 获得数据形式$X = (x_1, \dots, x_N)^T_{N \times P}$
@@ -69,6 +115,14 @@ $$
   当函数 convex 时，可以使用充要条件求梯度=0；当函数 non-convex 时，可以使用[EM 算法](https://www.cnblogs.com/Blackteaxx/p/18178802)迭代求解。
 
   在一定条件下，**MLE 和经验风险最小化等价**，详见《统计学习方法》习题 1.2
+
+  同时，**MLE 等价于 最小化数据分布与真实分布的 KL 散度**
+
+  $$
+  \theta^* = \arg \min_\theta - \sum_{i=1}^N \log p_\theta(x_i ; \theta) \approx - \mathbb{E}_{x - p_{data}} [\log p_\theta(x ; \theta)] \\
+  = \arg \min_\theta - \mathbb{E}_{x - p_{data}} [\log \frac{p_\theta(x ; \theta)}{p_{data}(x)}] \\
+  = \arg \min_\theta - \int p_{data}(x) \log \frac{p_\theta(x ; \theta)}{p_{data}(x)} dx = \arg \min_\theta KL(p_{data} || p_\theta)
+  $$
 
 - **MAP**
 
