--- a/ML/集成学习.md
+++ b/ML/集成学习.md
@@ -225,7 +225,7 @@ $$
 \mathcal{L}(H) = \mathbb{E}_D [\mathcal{l}(y, H(x))]
 $$
 
-我们通过$H_{t-1}$的损失函数值来求$H_t$的损失函数值，使用 Talyor Series，即
+我们通过$H_{t-1}$的损失函数值来求$H_t$的损失函数值，使用 Talyor Expansion(这里不理解，对一个函数的泰勒展开是什么？)，即
 
 $$
 l(y, H_t(x)) = l(y, H_{t-1}(x)) + \frac{\partial l(y, H(x))}{\partial H(x)} \bigg|_{H(x) = H_{t-1}(x)}(H_t(x) - H_{t-1}(x))
@@ -281,3 +281,11 @@ Bagging 更加注重**减小方差**。
 ## Bagging-Random Forest
 
 Random Forest 是 Bagging 的一个扩展，通过**对特征进行随机采样(列采样)**，使得每个基分类器的训练数据集不仅在样本（行采样）上不同，而且在特征上也不同。
+
+## Stacking
+
+Stacking 是一种更加复杂的集成学习方法，通过**将多个基分类器的输出作为新的特征**，然后训练一个元分类器。
+
+Stacking 通过**减小偏差**的方式来提高模型的泛化性能。
+
+其实也就是一个**二层的模型**，第一层是多个基分类器，第二层是一个元分类器。
