--- a/Mathmatics/Optimization/梯度下降.md
+++ b/Mathmatics/Optimization/梯度下降.md
@@ -1,3 +1,37 @@
 ## 方向的选取
 
-如果我们指定$\| d_k \| = 1$, 那么在$x_k$点处，$- \nabla f$ 就是函数$f$的最速下降方向(泰勒展开)。
+如果我们指定$\| d_k \| = 1$, 那么**在$x_k$点处**，$- \nabla f$ 就是函数$f$的最速下降方向(泰勒展开)。
+
+## 凸/严格凸/强凸函数
+
+### 凸函数
+
+设$f: \mathbb{R}^n \to \mathbb{R}$，如果对于任意的$x, y \in \mathbb{R}^n$和$\lambda \in [0, 1]$，有
+
+$$
+f(\lambda x + (1 - \lambda) y) \leq \lambda f(x) + (1 - \lambda) f(y)
+$$
+
+#### 凸函数性质
+
+大部分使用泰勒展开证明。
+
+1. $f(x) \text{  convex} \iff \forall x,y \in \mathbb{R}^n,\alpha \in \mathbb{R} ,\phi(\alpha) = f(x + \alpha y) \text{  convex}$
+
+   在几何上，这个性质表明了，对于一个切面，函数值在这个切面上是凸的。
+
+2. 一阶条件（f 可微）：$f(x) \text{ is convex} \iff f(y) \geq f(x) + \nabla f(x)^T (y - x)$
+
+3. 梯度单调性：$f(x) \text{ is convex} \iff (\nabla f(y) - \nabla f(x))^T (y - x) \geq 0$
+
+4. 二阶条件： $f(x) \text{ is convex} \iff \nabla^2 f(x) \succeq 0$
+
+### 强凸函数
+
+$m$强凸，我们希望还大于一个正数
+
+设$f: \mathbb{R}^n \to \mathbb{R}$，如果对于任意的$x, y \in \mathbb{R}^n$和$\lambda \in [0, 1]$，有
+
+$$
+f(\lambda x + (1 - \lambda) y) \leq \lambda f(x) + (1 - \lambda) f(y) - \frac{m}{2}\lambda(1 - \lambda) \| x - y \|^2
+$$
