--- a/code/Monte Carlo.ipynb
+++ b/code/Monte Carlo.ipynb
@@ -127,6 +127,33 @@
     "plt.hist(points, bins=100, density=True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2]], dtype=int64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(48).reshape(4,4,3)\n",
+    "\n",
+    "np.argmax(a, axis=2)"
+   ]
   }
  ],
  "metadata": {
