--- a/Courses/计算机网络-CY/物理层.md
+++ b/Courses/计算机网络-CY/物理层.md
@@ -60,6 +60,7 @@ $$
 
 1. 码元传输速率：码元的传输速率，单位是 baud
 2. 比特传输速率：比特的传输速率，单位是 bps
+3. 符号所带的信息量：$\log_2 M$，其中 $M$ 是符号的取值数目
 
 $$
 R_b = R_s \times \log_2 M
@@ -71,7 +72,7 @@ $$
 
 在数字设备中，表示单位时间内从网络中的某一点到达另一点的最高数据传输速率，单位是 bps。
 
-## 信道的最大速率（采样定理）
+## 信道的最大速率
 
 信号在信道中传输中，会出现失真、噪声等问题
 
@@ -79,7 +80,7 @@ $$
 
 ### 奈奎斯特定理
 
-在**理想低通**条件下，为了避免**码间串扰**，极限码元传输速率为$2B Baud$，$B$是信道的带宽，单位 Hz。
+在**理想低通**条件下，为了避免**码间串扰**，极限码元传输速率为$2B \ Baud$，$B$是信道的带宽，单位 Hz。
 
 一个等价的表述：如果一个任意信号通过了带宽为 $B$ 的低通滤波器，那么只要进行每秒 $2B$ 次采样，就可以完全恢复原始信号。
 
@@ -103,6 +104,16 @@ $$
 
 $$
 C = B \log_2 (1 + \frac{S}{N})
+$$
+
+### 采样定理
+
+如果给定带宽为 $B$ 的信道，那么只要进行每秒 $2B$ 次采样，就可以完全恢复原始信号。
+
+如果采样频率为 $f_s$，那么信号的最高频率为 $f_m$，那么采样定理可以表示为：
+
+$$
+f_s \geq 2f_m
 $$
 
 ## 编码与调制
@@ -138,7 +149,7 @@ $$
 
 - **曼彻斯特**编码：将时钟信号和数据信号做 XOR 操作，得到的信号就是曼彻斯特编码
 
-  - 从低到高 表示 0，从高到低表示 1
+  - **从低到高 表示 0，从高到低表示 1**
   - 不会出现三个码元相同的情况，时钟同步问题得到解决
   - 但是会出现传输速率的问题，假设带宽为$B$，那么 NRZ 编码的传输速率为$2B$，而曼彻斯特编码的传输速率为$B$（因为两个码元表示 1 bit 信息）
 
@@ -171,8 +182,6 @@ $$
 
 ## 数据交换方式
 
-回顾：交换方式的分类
-
 ![img](https://img2023.cnblogs.com/blog/3436855/202406/3436855-20240613164846116-2020564016.png)
 
 ### 电路交换
@@ -180,8 +189,8 @@ $$
 - **电路交换**：建立连接，传输数据，释放连接。有这三个步骤的交换方式就叫做电路交换。
   在数据传输期间，源节点和目的节点之间有一条由**中间节点构成**的专用物理连接线路，在数据传输结束前，这条线路一直保持。
 
-  - 优点： 传输速率高，传输稳定，适用于实时性强、大量数据传输的场景
-  - 缺点： 线路利用率低，连接建立时间长。
+  - 优点： 通信时延小（不需要存储转发）、有序、无冲突争用、实时性强、控制简单
+  - 缺点： 线路利用率低，连接建立时间长
 
 ### 报文交换
 
@@ -200,6 +209,11 @@ $$
 分为数据报式和虚电路式，分别是**无连接**和**有连接**的分组交换
 
 由于虚电路是逻辑电路，所以并不是电路交换，而是分组交换
+
+- 优点：无建立连接的时延、线路利用率高、简化 buffer 管理、加速传输、**减小单个分组出错概率和重传数据量**
+- 缺点：存在存储-转发的时延、需要额外的控制信息
+
+与报文交换的区别在于，分组交换是将报文分割成固定长度的数据块，然后加上控制信息，然后进行传输，传输延迟小，同时重传数据量小，但是需要额外的控制信息
 
 ## （静态）多路复用技术
 
@@ -269,3 +283,17 @@ $$
 ### WDM 波分复用
 
 就是光的频分多路复用
+
+## 语音信号数字化
+
+语音信号的频率范围是 300Hz-3400Hz，因此我们需要对语音信号进行采样，然后进行量化，最后进行编码
+
+使用脉冲编码调制 PCM 进行编码，将模拟信号转换为数字信号，一般采样频率为 8kHz，量化精度为 8 bit，最后的传输速率为 64kbps，即 8 bit / 125 $\mu s$
+
+### T1 系统
+
+T1 系统是美国的数字传输系统，采样频率为 8000Hz，量化精度为 8 bit，传输速率为 1.544Mbps
+
+即使用 24 个信道，每个信道传输 64kbps 的数据，剩下的 8kbps 用于控制信息
+
+在每一个 125 $\mu s$ 的时间片中，每个信道传输 8 bit 数据，每个信道的数据按照顺序传输，其中 7 bit 用于数据，1 bit 用于控制信息
