--- a/Courses/计算机网络-CY/网络层.md
+++ b/Courses/计算机网络-CY/网络层.md
@@ -4,6 +4,7 @@
 
 - 分组转发：网络层的主要功能是将分组源主机经过多个网络和多段链路传输到目的主机。在发送端，网络层将传输层的报文段封装成分组，并在每个分组中添加首部信息。在接收端，网络层将分组中的数据交付给接收方的传输层。
 - 路由选择：网络层的另一个重要功能是路由选择。路由选择是指在**网络中选择合适的路径**，使分组从源主机传输到目的主机。路由选择是网络层的核心功能，它决定了分组的传输路径，直接影响网络的性能和可靠性。
+- 连接异构网络：网络层的另一个重要功能是连接异构网络。网络层可以连接不同类型的网络，如以太网、无线网络、卫星网络等。网络层通过路由选择和分组转发，将不同类型的网络连接起来，实现主机之间的通信。
 
 网络层向上层提供了
 
@@ -24,7 +25,7 @@
 
 ### 静态路由算法
 
-静态路由算法是指路由表是由网络管理员**手动配置**的，不会根据网络的拓扑结构和流量情况进行调整。
+静态路由算法是指路由表是由网络管理员**手动配置**的，不会根据网络的**拓扑结构和流量情况**进行调整。
 
 但是当网络的拓扑结构发生变化时，网络的流量情况发生变化甚至数据不断发送导致网络中每一条链路状况发生改变时，静态路由算法就会出现问题。
 
