--- a/Courses/计算机网络-CY/计算机网络体系结构.md
+++ b/Courses/计算机网络-CY/计算机网络体系结构.md
@@ -7,12 +7,24 @@
 
 ## 计算机网络的组成
 
-由**硬件**和**软件**与**协议**组成。
+组成部分上来看：由**硬件**和**软件**与**协议**组成。
+
+工作方式来看：包括边缘部分和核心部分（中间的网络以及连接网络的路由器）。
 
 按照功能组成：
 
 - **通信子网**：负责**数据传输**，包括**传输介质**、**通信设备**、**通信控制软件**。（物理、链路、网络）
 - **资源子网**：负责**资源管理**，包括**计算机**、**存储设备**、**打印机**等。（会话、表示、应用）
+
+## 计算机网络的分类
+
+- WAN（广域网）：覆盖范围广，跨越城市、国家、甚至全球。
+- LAN（局域网）：覆盖范围小，一般在一个建筑物内。
+- MAN（城域网）：覆盖范围介于 LAN 和 WAN 之间，一般在一个城市内。
+- PAN（个人区域网）：覆盖范围更小，一般在一个房间内。
+
+- 广播式网络：所有主机共享一个信道，一个主机发送的数据包可以被所有主机接收。（ethernet）
+- 点对点网络：每一对主机之间有一条专用的通信链路。
 
 ## 性能指标
 
@@ -26,7 +38,7 @@
 
 带宽原本指的是信号的频带宽度，即模拟信号最高频率与最低频率之差，单位是 Hz。
 
-在计算机网络中，带宽指的是**数字信道**中**某一点到另一点**所能通过的**最高数据传输速率**，单位是 bps。
+在计算机网络中，带宽指的是**数字信道**中**某一点到另一点**所能通过的**最高数据传输速率**，单位是 bps。也就是**单位时间内进入信道的数据数量**。
 
 主机向数字信道发送数据的速率+数字信道传播电磁波的频率
 
@@ -34,9 +46,11 @@
 
 即使用主机向数字信道发送数据的速率描述数字信道能够传输数据的能力，因为传播电磁波的频率是固定的。
 
-带宽表达的是**信道的通信能力**，速率表达的是**主机的通信能力**
+带宽表达的是**信道的最高通信能力**，速率表达的是**主机的通信能力**
 
 ### 吞吐量
+
+用来表达信道的**实际传输速率**，
 
 表示单位时间内通过某个网络（或信道、接口）的数据量，单位是 bps。
 
@@ -97,6 +111,10 @@ $$
 
 从发送方发送数据到接收方**接收到确认信息**所需的时间，总共经历的时间。
 
+### 信道利用率
+
+指出某一信道有百分之多少的时间有数据通过
+
 ## 分层结构中的概念
 
 层次栈/分级栈：为了降低网络设计的复杂性，将网络分为**若干层**，每一层都有自己的**功能**，**只与相邻的层**进行通信，实现网络的模块化设计。
@@ -105,17 +123,19 @@ $$
 
 ### 协议
 
-协议是一组规则的集合，规定了同一层上的对等实体之间交换的**消息格式**和**消息含义**。
+协议**是一组规则的集合**，规定了同一层上的对等实体之间交换的**消息格式**和**消息含义**。
 
-协议由语法、语义和时序三个要素组成。
+协议由语法、语义和时序（同步）三个要素组成。
 
 - 语法：规定了消息的格式，包括消息中的各个字段的含义和位置。
 - 语义：规定了消息的含义，即对消息中的各个字段的解释与功能。
-- 时序：规定了操作的顺序
+- 时序：规定了操作的条件与顺序关系
 
 ### 接口
 
-接口定义了下一层向上一层提供的**哪些原语操作与服务**。相比较于服务而言，接口更加抽象。
+接口定义了下一层向上一层提供的**哪些原语操作与服务**，是同一节点内**相邻两层交换信息的连接点**。
+
+相邻两层的实体通过服务访问点 SAP（Service Access Point）进行通信。
 
 相当于只提供了一个函数名、参数、返回值，而没有具体的实现。
 
@@ -130,6 +150,15 @@ def quick_sort(arr: List[int]) -> List[int]
 服务定义了下一层向上一层提供的**功能**（或者说该层能够代表用户执行哪些操作）。不涉及具体实现，只是定义了功能。
 
 服务是由一组原语操作组成的，原语操作是服务的具体体现，由哪些原语取决于提供服务的本质。
+
+服务是语义化的，而接口是语法化的，即服务是`我能提供快速排序`, 接口是`我提供了一个函数 quick_sort供你调用`。
+
+### 服务于协议的关系
+
+- 服务是**面向用户**的，协议是**面向计算机**的。
+- 服务是**功能**的描述，协议是**规则**的描述。
+- 上一层的协议需要下一层的服务。
+- 提供给上一层的服务需要下一层的协议。
 
 ### 消息格式
 
@@ -167,6 +196,11 @@ n-SDU + n-PCI = n-PDU = (n-1)-SDU
 
 不可靠的无连接服务通常叫做**数据报服务**。
 
+### 可靠服务与不可靠服务
+
+- 可靠服务：保证数据的**完整性**、**有序性**、**无丢失**、**无重复**。
+- 不可靠服务：不保证数据的完整性、有序性、无丢失、无重复。而是尽力而为。通过用户发现错误并要求重传。
+
 ## OSI 七层模型
 
 为了达到所有异构网络的互联互通，国际标准化组织（ISO）制定了 OSI 七层模型。
@@ -180,5 +214,9 @@ Open System Interconnection，开放式系统互联。
 ## TCP/IP 四层模型
 
 ![img](https://img2023.cnblogs.com/blog/3436855/202406/3436855-20240613000217422-1239406522.png)
+
+TCP 是一个**面向连接**的**可靠**的**字节流**传输协议，提供了**数据完整性**、**有序性**、**无丢失**、**无重复**的服务。
+
+UDP 是一个**无连接**的**不可靠**的**数据报**传输协议
 
 ## 五层参考模型
