--- a/Courses/2024 Spring AML/ch11 特征选择与稀疏学习.md
+++ b/Courses/2024 Spring AML/ch11 特征选择与稀疏学习.md
@@ -86,10 +86,12 @@ $$
 \min_x f(x) + \lambda \| x \|_1
 $$
 
-如果满足 Lipschitz 连续梯度条件，即
+如果满足 Lipschitz 连续梯度条件，希望$\nabla f$不要变化太快，即
 
 $$
-\exist L > 0, \quad \| \nabla f(x) - \nabla f(y) \|_2 \leq L \| x - y \|_2, \quad \forall x, y
+\exist L > 0, \quad \| \nabla f(x) - \nabla f(y) \|_2 \leq L \| x - y \|_2, \quad \forall x, y \\
+\iff \frac{\| \nabla f(x) - \nabla f(y) \|}{\| x - y \|} \leq L \\
+\Rightarrow \nabla^2 f(x) \preceq L
 $$
 
 那么在$x_k$处对目标函数进行二阶泰勒展开，有
@@ -99,7 +101,7 @@ f(x) \approx f(x_k) + \nabla f(x_k)^T (x - x_k) + \frac{L}{2} \| x - x_k \|_2^2 
 = \frac{L}{2} \| x - (x_k - \frac{1}{L} \nabla f(x_k)) \|_2^2 + \text{const}
 $$
 
-? 那么我们可以得到
+那么我们可以得到
 
 $$
 x_{k+1} = \arg \min_x \frac{L}{2} \| x - (x_k - \frac{1}{L} \nabla f(x_k)) \|_2^2 \\
@@ -111,7 +113,7 @@ $$
 那么应用到 L1 正则化的问题上，我们可以得到
 
 $$
-x_{k+1} = \arg \min_x f(x_k) + \nabla f(x_k)^T (x - x_k) + \frac{L}{2} \| x - x_k \|_2^2 + \lambda \| x \|_1 \\
+x_{k+1} = \arg \min_x f(x_k) + \nabla f(x_k)^T (x - x) + \frac{L}{2} \| x - x_k \|_2^2 + \lambda \| x \|_1 \\
 \Rightarrow x_{k+1} = \arg \min_x \frac{L}{2} \| x - (x_k - \frac{1}{L} \nabla f(x_k)) \|_2^2 + \lambda \| x \|_1
 $$
 
@@ -132,3 +134,28 @@ z_i^{(k)} + \frac{\lambda}{L}, & z_i^{(k)} < -\frac{\lambda}{L}
 $$
 
 > L1 正则化的求解方法
+
+## 字典学习与稀疏表示
+
+学习到整个数据矩阵的稀疏性
+
+$$
+\min{B, \alpha_i} \sum_{i=1}^m \| x_i - B \alpha_i \|_2^2 + \lambda \| \alpha_i \|_1 \\
+\iff \min_{B, A} \| X - BA \|_F^2 + \lambda \| A \|_1
+$$
+
+可以使用 PGD 类似的思想交替优化$B, A$
+
+- Step 1：固定$B$, 求解$A$
+
+$$
+\min_{\alpha_i} \| x_i - B \alpha_i \|_2^2 + \lambda \| \alpha_i \|_1
+$$
+
+- Step 2：固定$A$, 求解$B$
+
+$$
+\min_B \| X - BA \|_F^2
+$$
+
+这个问题可以通过 SVD 分解求解，即每一步固定其他$B$中的列，求解$B$中的一列，$\min_{b_i} \| E_i - b_i\alpha^i \|_F^2$
