--- a/Courses/2024 Spring AML/ch13 半监督学习.md
+++ b/Courses/2024 Spring AML/ch13 半监督学习.md
@@ -12,7 +12,7 @@
 - 对于离散型数据，Cluster assumption：假设数据点在同一个 cluster 中的概率更大
 - 对于连续型数据，Manifold assumption：假设数据点在低维流形上，流形上的点更有可能是同一个类别
 
-## 生成式方法(GMM 再看看)
+## 生成式方法
 
 假设所有的数据都是由同一个潜在的模型生成的
 
@@ -20,6 +20,12 @@
 
 $$
 p(x) = \sum_{i=1}^N \alpha_i p(x;\Theta_i)
+$$
+
+再次说明，这个 **PDF** 可以看成一个**隐变量在控制**
+
+$$
+p(x) = \sum_{i=1}^N p(x, \Theta=i) = \sum_{i=1}^N p(x | \Theta=i) p(\Theta=i)
 $$
 
 于是令$f(x)$为预测标记
