--- a/ML/概率图模型基础.md
+++ b/ML/概率图模型基础.md
@@ -213,13 +213,13 @@ $$
 
 _Mark: $\psi_c(x_c)$取值随着 x_c 中的 x 取值改变而改变_
 
-接下来的问题时如何构建势函数，使得因子分解与条件独立性一致。
-
 然而，当变量个数较多时，团的数量会很多，因此需要简化，注意到团被极大团包含，因此可以使用极大团来简化。$C^*$为极大团的集合。
 
 $$
 p(x_1, \dots, x_p) = \frac{1}{Z} \prod_{c \in C^*} \psi_c(x_c)
 $$
+
+接下来的问题时如何构建势函数，使得因子分解与条件独立性一致。
 
 ### Hammesley-Clifford 定理
 
@@ -249,11 +249,12 @@ Inference 主要分为两类：
 
 1. $p(x_E)$
 2. $p(x_F | x_E)$, 而 $p(x_F | x_E)$又可以被写作
-3. MAP: $\arg \max_{x_F} p(x_F | x_E)$
 
 $$
 p(x_F | x_E) = \frac{p(x_F, x_E)}{p(x_E)}
 $$
+
+3. MAP: $\arg \max_{x_F} p(x_F | x_E)$
 
 实际上 Inference 过程最主要的问题就是求解边缘分布的过程。
 
@@ -281,16 +282,39 @@ $$
 P(x_5) = \sum_{x_1} \sum_{x_2} \sum_{x_3} \sum_{x_4} P(x_1, x_2, x_3, x_4, x_5)
 $$
 
-在这个过程中，如果直接计算，复杂度将会是$O(|x_1||x_2||x_3||x_4|)$，但是在其中有很多冗余的计算，因此可以使用动态规划的思想，将已经计算过的值存储起来，这样可以将复杂度降低到$O(|x_1| + |x_2| + |x_3| + |x_4|)$。
-
 $$
 = \sum_{x_1} \sum_{x_2} \sum_{x_3} \sum_{x_4} P(x_1) P(x_2 | x_1) P(x_3 | x_2) P(x_4 | x_3) P(x_5 | x_3) = \\
 \sum_{x_3} P(x_5 | x_3) \sum_{x_4} P(x_4 | x_3) \sum_{x_2} P(x_3 | x_2) \sum_{x_1} P(x_2 | x_1) P(x_1)
 $$
 
-可以定义中间函数：
+_曾经在 C 语言课上解释过最好先加再乘，因为乘法比加法慢_
+
+可以定义中间函数，减少重复计算的结果：
 
 $$
 m_{12}(x_2) = \sum_{x_1} P(x_2 | x_1) P(x_1) \\
 m_{23}(x_3) = \sum_{x_2} P(x_3 | x_2) m_{12}(x_2) \dots
 $$
+
+对于无向图，我们也可以使用 Variable Elimination 的方式进行推断。
+
+$$
+P(x_5) = \sum_{x_1} \sum_{x_2} \sum_{x_3} \sum_{x_4} P(x_1, x_2, x_3, x_4, x_5) \\
+= \sum_{x_1} \sum_{x_2} \sum_{x_3} \sum_{x_4} \psi_1(x_1, x_2) \psi_2(x_2, x_3) \psi_3(x_3, x_4) \psi_4(x_3, x_5) \\
+= \sum_{x_3} \psi_4(x_3, x_5) \sum_{x_4} \psi_3(x_3, x_4) \sum_{x_2} \psi_2(x_2, x_3) \sum_{x_1} \psi_1(x_1, x_2) = \\
+\sum_{x_3} \psi_4(x_3, x_5) \sum_{x_4} \psi_3(x_3, x_4) m_{23}(x_3) \sum_{x_1} \psi_1(x_1, x_2) m_{12}(x_2)
+$$
+
+### Belief Propagation
+
+对无向图进行推断，使用消息传递的方式，将消息传递给邻居节点。与上述过程类似
+
+![img](https://img2023.cnblogs.com/blog/3436855/202406/3436855-20240625175814740-552068526.png)
+
+```{C++}
+for x_i in NB(x_j)
+    collect message of x_i;
+    send message to x_j;
+```
+
+就是图的遍历，对于无向图，我们可以使用这种方式进行推断。
