--- a/ML/集成学习.md
+++ b/ML/集成学习.md
@@ -7,14 +7,15 @@
 
 集成学习的基本原理是：通过构建并结合多个学习器，可以获得比单个学习器更好的泛化性能。集成学习的核心思想是通过结合多个学习器的判断，可以获得比单个学习器更好的泛化性能。
 
-在 PAC 学习框架中，如果存在一个多项式的学习算法能够学习一个概念，并且准确率很高，那么就称这样一个概念是强可学习的；如果准确率比随机猜测好，那么就称这样一个概念是弱可学习的。Schapire 和 Freund 证明了弱可学习概念和强可学习概念是等价的，即**一个概念是弱可学习的充分必要条件是这个概念是强可学习的**。
+在 PAC 学习框架中，如果存在一个多项式的学习算法能够学习一个概念，并且准确率很高，那么就称这样一个概念是强可学习的；如果准确率比随机猜测好，那么就称这样一个概念是弱可学习的。Schapire 和 Freund 证明了**弱可学习概念和强可学习概念是等价**的，即**一个概念是弱可学习的充分必要条件是这个概念是强可学习的**。
 
-弱学习器可以是同质化的可以被叫做基学习），也可以是非同质化的（可以被叫做个体学习器）。
+弱学习器可以是同质化的（可以被叫做基学习），也可以是非同质化的（可以被叫做个体学习器）。
 
 那么如何根据弱学习器构建强学习器就是集成学习的任务。集成学习的方法主要有两类：
 
 - Bagging：并行化的集成学习方法，通过对训练数据集进行采样，然后训练多个弱学习器，最后通过投票的方式进行预测。
 - Boosting：串行化的序列化学习方法，通过对训练数据集进行加权，然后训练多个弱学习器，最后通过加权投票的方式进行预测。
+- Stacking：一种叠加泛化的集成方法，通过训练一个元模型来结合多个基础模型的预测结果。元模型就是以不同基学习器的预测结果作为输入，结果作为输出。
 
 要获得好的集成，个体学习器应当 **“好而不同”**，即个体学习器应当有较高的 **准确率**，同时应当有较大的 **多样性**。
 
