--- a/Mathmatics/Probability/大数定律与中心极限定理.md
+++ b/Mathmatics/Probability/大数定律与中心极限定理.md
@@ -21,7 +21,7 @@ $$
 那么可以证明
 
 $$
-\mathbb{E}[I_A] = 1 \times P(A) = \sum_\omega I_A(\omega) \times P(\omega) = P(A)
+\mathbb{E}[I_A] = \sum_\omega I_A(\omega) \times P(\omega) = 1 \times P(A) = P(A)
 $$
 
 ### Markov Inequality
@@ -115,7 +115,7 @@ $$
 
 ### Weak Law of Large Numbers
 
-弱大数定律是指，在大样本的情况下，样本的经验均值会以很大概率接近随机变量的期望。
+弱大数定律是指，**在大样本的情况下，样本的经验均值会以很大概率接近随机变量的期望**。
 
 我们考虑随机变量序列$X_1, X_2, \cdots, X_n$.我们定义随机变量序列的经验均值为$M_n = \frac{1}{N} \sum_{i=1}^n X_i$，注意到$M_n$也是一个随机变量。
 
@@ -171,7 +171,7 @@ $$
 
 如果$X_i$是独立同分布的伯努利随机变量，那么$M_n$满足弱大数定律。
 
-同时可以进行扩展，我们将一个事件$A$嵌入一个实行函数中，转换为一个伯努利随机变量，那么我们可以得到
+同时可以进行扩展，我们将一个事件$A$嵌入一个示性函数中，转换为一个伯努利随机变量，那么我们可以得到
 
 $$
 \mathbb{E}[\frac{1}{n} \sum_{i=1}^n I_{A,i}] = \frac{1}{n} \sum_{i=1}^n \mathbb{E}[I_{A,i}] = \frac{1}{n} \sum_{i=1}^n P(A) = P(A)
