--- a/Courses/2023 LhyML/正课L1.md
+++ b/Courses/2023 LhyML/正课L1.md
@@ -71,3 +71,11 @@ y = h W_{hy} + b_{hy}
 $$
 
 然而对于所有$N$个数据计算损失函数的梯度是非常耗时的，因此我们可以使用**Mini-batch**的方法，每次只计算一部分数据的梯度
+
+### Structure
+
+因此，Deep Learning 最核心的概念就是
+
+- Model defined by a set of functions
+- Loss function
+- Optimization
