--- a/Mathmatics/数学分析/序列极限.md
+++ b/Mathmatics/数学分析/序列极限.md
@@ -84,11 +84,11 @@ $$
 >
 > - 如果$\lim_{n \to \infty} x_n = a$，$\lim_{n \to \infty} y_n = b$
 > - 并且$a < b$
-> - 则存在$N \in \mathbb{N}$，使得$\forall n > N, x_n < y_n$
+> - $\Rightarrow$ 存在$N \in \mathbb{N}$，使得$\forall n > N, x_n < y_n$
 
 ---
 
 > 定理 7（保序性）：
 >
 > - 如果$\forall n \in \mathbb{N}, x_n \leq y_n$
-> - 则$\lim x_n \leq \lim y_n$
+> - $\Rightarrow \lim x_n \leq \lim y_n$
