--- a/Courses/2023 LhyML/正课L1.md
+++ b/Courses/2023 LhyML/正课L1.md
@@ -76,6 +76,12 @@ $$
 
 因此，Deep Learning 最核心的概念就是
 
-- Model defined by a set of functions
+- **Model** defined by **a set of functions**
 - Loss function
 - Optimization
+
+## Logistic Regression
+
+我们需要输出 logits，因此需要对函数进行变换，使得输出值在$(-\infty, \infty)$之间，这就是**Logit Function**
+
+- Function Set：$f(x; \Theta) = f(C_1 | x ; \Theta)= \sigma(x w + b)$
