--- a/Mathmatics/数学分析/序列极限.md
+++ b/Mathmatics/数学分析/序列极限.md
@@ -6,38 +6,83 @@ $$
 x: \mathbb{N} \to \mathbb{R}
 $$
 
-有界性：
+---
 
-$$
-\exist M \in \mathbb{R}, \forall n \in \mathbb{N}, |x_n| \leq M
-$$
+> 有界性：对于一个序列$\{x_n\}$, 如果满足：
+>
+> $$
+> \exist M \in \mathbb{R}, \forall n \in \mathbb{N}, |x_n| \leq M
+> $$
+>
+> 那么我们称这样一个序列是有界的。
 
-无界性是对有界性的否定：
+---
 
-$$
-\forall M \in \mathbb{R}, \exist n \in \mathbb{N}, |x_n| > M
-$$
+> 无界性：对于一个序列$\{x_n\}$, 如果满足：
+>
+> $$
+> \forall M \in \mathbb{R}, \exist n \in \mathbb{N}, |x_n| > M
+> $$
 
 ## 无穷小序列
 
+### 定义
+
 直观的讲，无穷小序列是指在零附近的一个邻域内，从某项起所有项都在这个邻域内。
+
+对于一个序列$\{x_n\}$, 如果满足：
 
 $$
 \forall \varepsilon > 0, \exist N \in \mathbb{N}, \forall n > N, |x_n| < \varepsilon
 $$
 
+那么我们称这样一个序列为无穷小序列。
+
 ---
 
-> 引理：如果$\{\alpha_n\}$和$\{\beta_n\}$是实数序列，并存在$N_0 \in \mathbb{N}$，使得$\forall n > N_0, \alpha_n \leq \beta_n$，则如果$\{\beta_n\}$是无穷小序列，则$\{\alpha_n\}$也是无穷小序列。
+在做例题的时候，我们通常用放宽不等式的方法来证明一个序列是无穷小序列，因此我们给出如下引理
+
+> 引理：如果$\{\alpha_n\}$和$\{\beta_n\}$是实数序列
+>
+> - 存在$N_0 \in \mathbb{N}$，使得$\forall n > N_0, | \alpha_n | \leq \beta_n$
+> - $\{\beta_n\}$是无穷小序列
+> - 则$\{\alpha_n\}$也是无穷小序列。
 
 $\forall \varepsilon > 0, \exist N_1, \beta_n < \varepsilon$, 我们取$N = \max(N_0, N_1)$，则$\forall n > N, \alpha_n \leq \beta_n < \varepsilon$。
 
+### 性质
+
+由于极限的性质是与后无限项有关的，因此我们有如下引理：
+
+> 引理（有界性）：如果$\{\alpha_n\}$是无穷小序列，那么$\{\alpha_n\}$是有界的。
+
 ---
+
+> 定理：
+>
+> 1. 有界序列的和、差、积仍然是有界序列
+> 2. 无穷小序列的和是无穷小序列
+> 3. 有界序列和无穷小序列的积是无穷小序列
+> 4. $\{\alpha_n\}$无穷小$\iff \{| a_n | \}$无穷小
 
 ## 序列极限
 
+对于一个序列$\{x_n\}$, 如果满足：
+
 $$
-\forall \varepsilon > 0, \exist N \in \mathbb{N}, \forall n > N, |x_n - a| < \varepsilon \iff \lim_{n \to \infty} x_n = a
+\forall \varepsilon > 0, \exist N \in \mathbb{N}, \forall n > N, |x_n - a| < \varepsilon
+$$
+
+那么我们**称这样一个序列收敛**，且极限为$a$，记作：
+
+$$
+\lim\_{n \to \infty} x_n = a
+$$
+
+或者
+
+$$
+x_n \to a \quad (n \to \infty)
 $$
 
 ---
@@ -46,10 +91,10 @@ $$
 
 ---
 
-> 定理 2（夹逼准则）：如果$\{x_n\}, \{y_n\}, \{z_n\}$是实数序列，
+> 定理 2（夹挤准则）：如果$\{x_n\}, \{y_n\}, \{z_n\}$是实数序列，
 >
-> - $x_n \leq y_n \leq z_n$，
-> - 并且$\lim_{n \to \infty} x_n = \lim_{n \to \infty} z_n = a$，
+> - $ \forall n \in \mathbb{N} \quad x_n \leq y_n \leq z_n$，
+> - $\lim_{n \to \infty} x_n = \lim_{n \to \infty} z_n = a$，
 > - 则$\lim_{n \to \infty} y_n = a$。
 
 ---
@@ -72,11 +117,20 @@ $$
 
   $\{x_n\} = a + \{\alpha_n\}$，$\lim_{n \to \infty} \alpha_n = 0$，则$\forall \varepsilon > 0, \exist N \in \mathbb{N}, \forall n > N, |\alpha_n| < \varepsilon$，则$|x_n - a| = |\alpha_n| < \varepsilon$。
 
----
-
 ### 收敛序列的性质
 
-四则运算的结合性质
+> 定理 4（有界性）：如果$\{x_n\}$是收敛序列，则$\{x_n\}$是有界的。
+
+取$\epsilon = 1, \exist N \in \mathbb{N}, \forall n > N, | x_n - a | < 1$，于是我们取$M = \max\{ x_1, \cdots, x_{N}, 1+a \}$, 则$\forall n \in \mathbb{N}, |x_n| \leq M$。
+
+---
+
+> 定理 5（极限的运算性质）: 如果$\{x_n\}, \{y_n\}$是收敛序列，且$\lim_{n \to \infty} x_n = a, \lim_{n \to \infty} y_n = b$，则：
+>
+> 1. $\lim_{n \to \infty} | x_n | = |a|$
+> 2. $\lim_{n \to \infty} (x_n \pm y_n) = a \pm b$
+> 3. $\lim_{n \to \infty} x_n y_n = a \cdot b$
+> 4. 如果$b \neq 0$，则$\lim_{n \to \infty} \frac{x_n}{y_n} = \frac{a}{b}$
 
 ### 收敛序列与不等式
 
@@ -84,11 +138,37 @@ $$
 >
 > - 如果$\lim_{n \to \infty} x_n = a$，$\lim_{n \to \infty} y_n = b$
 > - 并且$a < b$
-> - $\Rightarrow$ 存在$N \in \mathbb{N}$，使得$\forall n > N, x_n < y_n$
+> - 则存在$N \in \mathbb{N}$，使得$\forall n > N, x_n < y_n$
+
+取$\epsilon=\frac{b-a}{2}$,因此有
+
+$$
+\exist N_1, \quad \forall n > N_1, |x_n - a| < \frac{b-a}{2} \\
+\exist N_2, \quad \forall n > N_2, |y_n - b| < \frac{b-a}{2}
+$$
+
+我们取$N = \max(N_1, N_2)$，则$\forall n > N$，有
+
+$$
+a - \frac{b-a}{2} < x_n < a + \frac{b-a}{2} \\
+b - \frac{b-a}{2} < y_n < b + \frac{b-a}{2}
+$$
+
+Q.E.D.
 
 ---
 
 > 定理 7（保序性）：
 >
 > - 如果$\forall n \in \mathbb{N}, x_n \leq y_n$
-> - $\Rightarrow \lim x_n \leq \lim y_n$
+> - 则$\lim x_n \leq \lim y_n$
+
+## 收敛原理
+
+在实际迭代过程中，我们更对一个序列是否收敛更感兴趣，而不是具体的极限值。因此发展出了如下判断收敛的方法：
+
+### 单调收敛原理
+
+### Bolzano-Weierstrass 定理
+
+### Cauchy 准则
