--- a/Courses/EECS 498-007/A1/pytorch101.ipynb
+++ b/Courses/EECS 498-007/A1/pytorch101.ipynb
@@ -40,13 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "H5PzjwH7VTO4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -162,19 +171,19 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(GOOGLE_DRIVE_PATH)\n",
+    "# import sys\n",
+    "# sys.path.append(GOOGLE_DRIVE_PATH)\n",
     "\n",
-    "import time, os\n",
-    "os.environ[\"TZ\"] = \"US/Eastern\"\n",
-    "time.tzset()\n",
+    "# import time, os\n",
+    "# os.environ[\"TZ\"] = \"US/Eastern\"\n",
+    "# time.tzset()\n",
     "\n",
-    "from pytorch101 import hello\n",
-    "hello()\n",
+    "# from pytorch101 import hello\n",
+    "# hello()\n",
     "\n",
-    "pytorch101_path = os.path.join(GOOGLE_DRIVE_PATH, 'pytorch101.py')\n",
-    "pytorch101_edit_time = time.ctime(os.path.getmtime(pytorch101_path))\n",
-    "print('pytorch101.py last edited on %s' % pytorch101_edit_time)"
+    "# pytorch101_path = os.path.join(GOOGLE_DRIVE_PATH, 'pytorch101.py')\n",
+    "# pytorch101_edit_time = time.ctime(os.path.getmtime(pytorch101_path))\n",
+    "# print('pytorch101.py last edited on %s' % pytorch101_edit_time)"
    ]
   },
   {
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -301,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -318,7 +327,7 @@
        "2.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -356,7 +365,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -419,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -436,7 +445,7 @@
        "range(0, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -513,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -569,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -640,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -709,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -804,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -839,10 +848,10 @@
       "        [0., 0., 1.]])\n",
       "\n",
       "random tensor:\n",
-      "tensor([[0.3035, 0.0203, 0.0167, 0.3904, 0.0265],\n",
-      "        [0.0910, 0.1164, 0.5465, 0.5565, 0.9351],\n",
-      "        [0.7548, 0.1220, 0.2772, 0.8624, 0.8434],\n",
-      "        [0.9109, 0.1156, 0.6688, 0.2178, 0.2043]])\n"
+      "tensor([[0.0312, 0.7022, 0.8344, 0.8498, 0.5714],\n",
+      "        [0.5560, 0.6730, 0.8882, 0.1940, 0.1989],\n",
+      "        [0.4495, 0.5476, 0.9176, 0.6265, 0.0328],\n",
+      "        [0.0116, 0.9661, 0.5679, 0.6208, 0.3297]])\n"
      ]
     }
    ],
@@ -882,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -946,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1026,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1085,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1139,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1247,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1304,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1396,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1467,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1507,7 +1516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\86139\\AppData\\Local\\Temp\\ipykernel_31300\\3860217186.py:18: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "C:\\Users\\86139\\AppData\\Local\\Temp\\ipykernel_36788\\3860217186.py:18: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
       "  print(a.storage().data_ptr() == c.storage().data_ptr())\n"
      ]
     }
@@ -1545,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1576,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1593,7 +1602,34 @@
     },
     "id": "5-5UtVXPVTQL"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "last_row:\n",
+      "tensor([11, 12, 13, 14, 15])\n",
+      "Correct: True\n",
+      "\n",
+      "third_col:\n",
+      "tensor([[ 3],\n",
+      "        [ 8],\n",
+      "        [13]])\n",
+      "Correct: True\n",
+      "\n",
+      "first_two_rows_three_cols:\n",
+      "tensor([[1, 2, 3],\n",
+      "        [6, 7, 8]])\n",
+      "Correct: True\n",
+      "\n",
+      "even_rows_odd_cols:\n",
+      "tensor([[ 2,  4],\n",
+      "        [12, 14]])\n",
+      "Correct: True\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pytorch101 import slice_indexing_practice\n",
     "\n",
